# sealedmessages

./: .dockerignore  .gitignore  .tool-versions  Makefile  README.md  Tiltfile  benchmark.sh  docker-bake.json
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/auth/: apps.py  urls.py  views.py
backend/backend/: asgi.py  celery.py  settings.py  urls.py
backend/core/: health_middleware.py
backend/messages/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/messages/migrations/: 0001_initial.py  0002_auto_20210320_2317.py
backend/tests/: test_backend.py
frontend/: nginx.conf  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.tsx  index.css
frontend/src/Client/: Client.ts  Models.ts  Provider.tsx
frontend/src/Components/: ApplicationShell.tsx  DescriptionCard.tsx
frontend/src/Pages/: CreateMessage.tsx  HomePage.tsx  LoginPage.tsx  MessageDetailPage.tsx
frontend/src/Wrappers/: RequireAuthenticated.tsx  WithSession.tsx
operations/: Dockerfile  Dockerfile.backend  Dockerfile.frontend
operations/helm/backend/: Chart.yaml  values.yaml
operations/helm/backend/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingressroute.yaml  service.yaml
operations/helm/frontend/: values.yaml
operations/helm/frontend/templates/: deployment.yaml  service.yaml
operations/helm/worker/: Chart.yaml  values.yaml
operations/helm/worker/templates/: NOTES.txt  _helpers.tpl  deployment.yaml
